next version <kevin@koconnor.net>

  * Initial support for detecting MSM7500 and OMAP15xx cpus.

  * Basic support for decoding register names on MMUTRACE events in
    haretconsole.

  * New command "ALLOCTEST" - allocates memory and then frees it.  It
    is useful to see where wince places user memory requests.

  * New variable "VIRTVRAM" - it stores the virtual address of the
    video ram reported by wince.

20070915 0.5.0 <kevin@koconnor.net>, <pmiscml@gmail.com>

  * It is now possible to detect processors by inspecting the wince
    processor information.  (SC32442 and OMAP850 checks added.)

  * New command "newvar" that enhances memory watching.  It is now
    possible to dynamically create new lists - for example:
        newvar CLOCKS GPIOS 'Architecture clock registers'
        addlist CLOCKS p2v(0x41300000)
    will allow one to be able to later run "watch clocks".

  * New command "joinlist" - this allows one to append multiple watch
    lists into a single list.  For example:
        joinlist mylist gpios clocks

  * Enhanced "mmutrace" capabilities - it is now possible to ignore
    accesses based on the value read/written.  For example:
        addlist mmutrace p2v(0x56000024) 4 rw 0xffffe7ff
    will watch the address but only report when bits 11/12 change.

  * Improved OMAP850 support.  The commands "watch GPIOS" and "wirq"
    should work by default.  Also, the omap850 is now properly
    recognized with an arm926 cpu core and cache flushing works
    correctly.

  * Reads and writes to invalid memory should now be caught in haret.
    This used to work in haret v0.3.8 and earlier (when haret was
    compiled with the MS compiler), but broke in cegcc versions.
    Support for catching access violations is now available with the
    cegcc compiler.

  * One can now watch the CPSR and SPSR registers via the standard
    watch methods.  For example:
      addlist resumetraces cpsr
