@@ -10,18 +10,16 @@
 
 #include "xtypes.h" // uint
 
-// Interpret one line of scripting language; returns false on QUIT
 bool scrInterpret (const char *str, uint lineno);
-// Execute the script from given file
 extern void scrExecute (const char *scrfn, bool complain = true);
 void runMemScript(const char *script);
-// Parse the next part of the string as an expression
 bool get_expression(const char **s, uint32 *v, int priority = 0, int flags = 0);
-// Parse the next string as a literal token
+bool get_range(const char **s, uint32 *start, uint32 *end);
 int get_token(const char **s, char *storage, int storesize, int for_expr=0);
 void ScriptError(const char *fmt, ...)
     __attribute__ ((format (printf, 1, 2)));
 int arg_snprintf(char *buf, int len, const char *args);
+
 // Maximum command line supported
 static const int MAX_CMDLEN = 512;
 
